--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -14,19 +14,10 @@ checks:
     fix_line_ending: true
     fix_identation_4spaces: true
     fix_doc_comments: true
-    
-build:
-  tests:
-    override:
-      -
-        command: 'phpunit -c phpunit.xml --coverage-clover=./build/logs/clover.xml'
-        coverage:
-          file: './build/logs/clover.xml'
-          format: 'php-clover'
 
 filter:
-  paths: [src/*]
-  excluded_paths: [bin/*, spec/*, tests/*, stub/*, coverage/*]
+  paths: [src/*, tests/*]
+  excluded_paths: [bin/*, spec/*, stub/*, coverage/*]
 
 tools:
   external_code_coverage:
