--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -20,15 +20,12 @@ filter:
   excluded_paths: [bin/*, spec/*, stub/*, coverage/*]
 
 tools:
-  external_code_coverage:
-    timeout: 1200
-    runs: 3
   php_code_coverage: false
   php_code_sniffer:
     config:
       standard: PSR2
     filter:
-      paths: ['src']
+      paths: ['src', 'tests']
   php_loc:
     enabled: true
     excluded_dirs: [vendor, spec, stubs]
